cmake_minimum_required(VERSION 3.17)
project(dokany4j C)
set(CMAKE_C_STANDARD 99)
add_library(dokany4j SHARED one_papachi_dokany4j_Dokany4j.c)
target_link_libraries(dokany4j "C:/Program Files/Dokan/DokanLibrary-2.0.5/lib/dokan2.lib")
include_directories("C:/Program Files/Dokan/DokanLibrary-2.0.5/include/dokan")
include_directories("$ENV{JAVA_HOME}/include")
include_directories("$ENV{JAVA_HOME}/include/win32")
